--- a/src/error-analysis.ipynb
+++ b/src/error-analysis.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-13T08:04:44.898397Z",
-     "start_time": "2025-02-13T08:04:44.891764Z"
+     "end_time": "2025-05-29T10:40:09.282777Z",
+     "start_time": "2025-05-29T10:40:09.275015Z"
     }
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "local_finder_addition = \"/Users/anna/sftp_mount/hpc_disk2/02-awegmann/\""
+    "local_finder_addition = \"/Users/anna/sftp_mount/hpc_disk/02-awegmann/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "path_gpt2_PAN = os.path.join(local_finder_addition, \"TOKENIZER/output/VAR/train-mixed/base-BERT/mixed-gpt2-32000/749M/steps-45000/seed-42/42/PAN\")\n",
@@ -49,8 +49,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T08:04:44.899265Z",
-     "start_time": "2025-02-13T08:04:44.895895Z"
+     "end_time": "2025-05-29T10:40:14.774469Z",
+     "start_time": "2025-05-29T10:40:14.767789Z"
     }
    },
    "id": "8ae404da341aa907"
@@ -74,24 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-02-13 09:04:50,798 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-no-32000/tokenizer.json\n",
-      "2025-02-13 09:04:51,331 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-wsorg-32000/tokenizer.json\n",
-      "2025-02-13 09:04:51,841 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-ws-32000/tokenizer.json\n",
-      "2025-02-13 09:04:52,345 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-32000/tokenizer.json\n",
-      "2025-02-13 09:04:52,806 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-llama3-32000/tokenizer.json\n",
-      "2025-02-13 09:04:53,287 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-500/tokenizer.json\n",
-      "2025-02-13 09:04:53,312 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-4000/tokenizer.json\n",
-      "2025-02-13 09:04:53,422 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-64000/tokenizer.json\n",
-      "2025-02-13 09:04:54,423 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-128000/tokenizer.json\n",
-      "2025-02-13 09:04:56,254 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/twitter-gpt2-32000/tokenizer.json\n",
-      "2025-02-13 09:04:56,737 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/pubmed-gpt2-32000/tokenizer.json\n",
-      "2025-02-13 09:04:57,242 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk2/02-awegmann/TOKENIZER/tokenizer/wikipedia-gpt2-32000/tokenizer.json\n"
+      "2025-05-29 12:40:31,744 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-no-32000/tokenizer.json\n",
+      "2025-05-29 12:40:32,365 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-wsorg-32000/tokenizer.json\n",
+      "2025-05-29 12:40:32,964 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-ws-32000/tokenizer.json\n",
+      "2025-05-29 12:40:33,598 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-32000/tokenizer.json\n",
+      "2025-05-29 12:40:34,245 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-llama3-32000/tokenizer.json\n",
+      "2025-05-29 12:40:34,850 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-500/tokenizer.json\n",
+      "2025-05-29 12:40:34,897 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-4000/tokenizer.json\n",
+      "2025-05-29 12:40:35,010 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-64000/tokenizer.json\n",
+      "2025-05-29 12:40:36,298 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/mixed-gpt2-128000/tokenizer.json\n",
+      "2025-05-29 12:40:38,638 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/twitter-gpt2-32000/tokenizer.json\n",
+      "2025-05-29 12:40:39,228 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/pubmed-gpt2-32000/tokenizer.json\n",
+      "2025-05-29 12:40:39,878 - styletokenizer.utility.custom_logger - DEBUG - Loading previously fitted tokenizer from local path: /Users/anna/sftp_mount/hpc_disk/02-awegmann/TOKENIZER/tokenizer/wikipedia-gpt2-32000/tokenizer.json\n"
      ]
     }
    ],
@@ -116,51 +116,51 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T08:04:57.765141Z",
-     "start_time": "2025-02-13T08:04:47.421076Z"
+     "end_time": "2025-05-29T10:40:40.443472Z",
+     "start_time": "2025-05-29T10:40:24.801217Z"
     }
    },
    "id": "fc4951e844e8f379"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Tokenized gpt2:\n",
-      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'umper']\n",
+      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'umper', 'Ġtry', 'na']\n",
       "Tokenized llama3:\n",
-      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'umper']\n",
+      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'umper', 'Ġtry', 'na']\n",
       "Tokenized wsorg:\n",
-      "['Ġ', 'th', 'i', 'is', 'Ġ', 'te', 'h', 'Ġ', 'lg', 'bt', 'q', 'ia', '+', 'Ġ', 'jum', 'per']\n",
+      "['Ġ', 'th', 'i', 'is', 'Ġ', 'te', 'h', 'Ġ', 'lg', 'bt', 'q', 'ia', '+', 'Ġ', 'jum', 'per', 'Ġ', 'try', 'na']\n",
       "Tokenized ws:\n",
-      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'umper']\n",
+      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'umper', 'Ġtry', 'na']\n",
       "Tokenized no:\n",
-      "['Ġth', 'i', 'is', 'Ġte', 'hĠ', 'l', 'g', 'bt', 'q', 'ia', '+Ġ', 'j', 'um', 'per']\n",
+      "['Ġth', 'i', 'is', 'Ġte', 'hĠ', 'l', 'g', 'bt', 'q', 'ia', '+Ġ', 'j', 'um', 'per', 'Ġtry', 'na']\n",
       "Tokenized 500:\n",
-      "['Ġth', 'i', 'is', 'Ġt', 'e', 'h', 'Ġl', 'g', 'b', 't', 'q', 'i', 'a', '+', 'Ġj', 'um', 'p', 'er']\n",
+      "['Ġth', 'i', 'is', 'Ġt', 'e', 'h', 'Ġl', 'g', 'b', 't', 'q', 'i', 'a', '+', 'Ġj', 'um', 'p', 'er', 'Ġtr', 'y', 'n', 'a']\n",
       "Tokenized 4k:\n",
-      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'um', 'per']\n",
+      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'bt', 'q', 'ia', '+', 'Ġj', 'um', 'per', 'Ġtry', 'na']\n",
       "Tokenized 64k:\n",
-      "['Ġthi', 'is', 'Ġteh', 'Ġlg', 'bt', 'q', 'ia', '+', 'Ġjumper']\n",
+      "['Ġthi', 'is', 'Ġteh', 'Ġlg', 'bt', 'q', 'ia', '+', 'Ġjumper', 'Ġtry', 'na']\n",
       "Tokenized 128k:\n",
-      "['Ġthi', 'is', 'Ġteh', 'Ġlgbt', 'q', 'ia', '+', 'Ġjumper']\n",
+      "['Ġthi', 'is', 'Ġteh', 'Ġlgbt', 'q', 'ia', '+', 'Ġjumper', 'Ġtryna']\n",
       "Tokenized twitter:\n",
-      "['Ġthi', 'is', 'Ġte', 'h', 'Ġlgbt', 'q', 'ia', '+', 'Ġj', 'umper']\n",
+      "['Ġthi', 'is', 'Ġte', 'h', 'Ġlgbt', 'q', 'ia', '+', 'Ġj', 'umper', 'Ġtryna']\n",
       "Tokenized pubmed:\n",
-      "['Ġthi', 'is', 'Ġte', 'h', 'Ġl', 'g', 'b', 't', 'q', 'ia', '+', 'Ġj', 'um', 'per']\n",
+      "['Ġthi', 'is', 'Ġte', 'h', 'Ġl', 'g', 'b', 't', 'q', 'ia', '+', 'Ġj', 'um', 'per', 'Ġtr', 'yn', 'a']\n",
       "Tokenized wikipedia:\n",
-      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'b', 't', 'q', 'ia', '+', 'Ġj', 'umper']\n"
+      "['Ġth', 'i', 'is', 'Ġte', 'h', 'Ġl', 'g', 'b', 't', 'q', 'ia', '+', 'Ġj', 'umper', 'Ġtry', 'na']\n"
      ]
     }
    ],
    "source": [
     "for key, tok in TOKENIZERS.items():\n",
     "    print(f'Tokenized {key}:')\n",
-    "    print(tok.tokenize(\" thiis teh lgbtqia+ jumper\")) # St. ma'am /home  SAY CAN Hello 1) ballots: narcotics Guy c00l lymphadenopathy')}')\n",
+    "    print(tok.tokenize(\" thiis teh lgbtqia+ jumper tryna\")) # St. ma'am /home  SAY CAN Hello 1) ballots: narcotics Guy c00l lymphadenopathy')}')\n",
     "    # ain't noboday got time for that.\n",
     "    # lgbtq+ y'all queer b4 ;\\n 5 a.m.  lgbtq+ authorised  559  tumour\n",
     "    # and/or well-being \n",
@@ -191,8 +191,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-13T08:05:03.566372Z",
-     "start_time": "2025-02-13T08:05:03.552538Z"
+     "end_time": "2025-05-29T10:43:10.188378Z",
+     "start_time": "2025-05-29T10:43:10.130892Z"
     }
    },
    "id": "f2f02ed6e0b53bfe"
